[gd_scene load_steps=3 format=3 uid="uid://1vvrh028mxvb"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_gmi3n"]
[ext_resource type="Texture2D" uid="uid://f5grm6acvtm5" path="res://icons/x-icon.png" id="2_8vb55"]

[node name="card" type="VBoxContainer"]
offset_right = 8.0
offset_bottom = 8.0
theme_override_constants/separation = 0
script = ExtResource("1_gmi3n")

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="card_button" type="Button" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click to change between finished and todo"
text = "Card"

[node name="DeleteButton" type="Button" parent="buttons"]
layout_mode = 2
tooltip_text = "Click to delete this card"
icon = ExtResource("2_8vb55")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(120, 20)
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="PriorityLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "Low priority"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="buttons/card_button" to="." method="_on_card_button_pressed"]
[connection signal="pressed" from="buttons/DeleteButton" to="." method="_on_delete_button_pressed"]
